--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.14.2
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -9,7 +10,11 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 python-dotenv==1.1.0
+pytz==2025.2
 requests==2.32.3
+soupsieve==2.8
+typing_extensions==4.15.0
 urllib3==2.3.0
 waitress==3.0.2
 Werkzeug==3.1.3
+gunicorn==21.2.0
